--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script src=""></script>
+    <script src="./index.js"></script>
 </body>
 </html>
