--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <div class="container">
+        <h1 class="game-name">ROCK PAPER SCISSORS</h1>
+        <h2 class="players">Human VS Computer</h2>
+        <section class="selection-area">
+            <div class="human">
+                <h3>Player</h3>
+                <img src="" alt="rock image">
+                <img src="" alt="paper image">
+                <img src="" alt="scissor image">
+            </div>
+            <div class="computer">
+                <h3>Computer</h3>
+                <img src="" alt="rock image">
+                <img src="" alt="paper image">
+                <img src="" alt="scissor image">
+            </div>
+        </section>
+        <section class="game-status">
+            <h3>WHO WON</h3>
+        </section>
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
