--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>ROCK - PAPER - SCISSORS</h1>
             <h2 class="players">Human VS Computer</h2>
         </div>
-        <p class="rules" id="rules">herer</p>
+        <p class="rules" id="rules">DEAR PLAYER !  You have five chances to choose a weapon to defeat if you will defeated by 3 times you will lost the battle.</p>
         <p class="instruction">choose your weapon to defeat !</p>
         <section class="game-ground">
             <div class="human">
@@ -36,8 +36,7 @@
             </div>
         </section>
         <section class="game-status">
-            <h3>WHO WON</h3>
-            <p id="result">result: </p>
+            <h3 id="result">WHO WON</h3>
         </section>
         <footer>@Game Design by Dania</footer>
     </div>
