--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </section>
         <section class="game-status">
-            <h3 id="result">WHO WON</h3>
+            <h3 id="result">Result</h3>
         </section>
         <footer>@Game Design by Dania</footer>
     </div>
