--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <button>Start Game</button>
+    <p class="rules" id="rules">DEAR PLAYER ! <br> You have eight chances to defeat if you will defeated by 5 times you will lost the battle.</p>
     <div class="container">
         <div class="game-name">
             <h1>ROCK - PAPER - SCISSORS</h1>
             <h2 class="players">Human VS Computer</h2>
         </div>
-        <p class="rules" id="rules">DEAR PLAYER !  You have five chances to choose a weapon to defeat if you will defeated by 3 times you will lost the battle.</p>
+        
         <p class="instruction">choose your weapon to defeat !</p>
         <section class="game-ground">
             <div class="human">
@@ -36,7 +38,7 @@
             </div>
         </section>
         <section class="game-status">
-            <h3 id="result">Result</h3>
+            <h3 id="result"> Who will become winner of the day ! </h3>
         </section>
         <footer>@Game Design by Dania</footer>
     </div>
