--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <button>Start Game</button>
-    <p class="rules" id="rules">DEAR PLAYER ! <br> You have eight chances to defeat if you will defeated by 5 times you will lost the battle.</p>
-    <div class="container">
+    <button id="start-btn" onclick=startGame()>Start Game</button>
+    <p id="rules">DEAR PLAYER ! <br> You have chances to defeat untill you will beat 5 battles first. If you got defeated by 5 times first you will lost the battle.</p>
+    <div id="game-container">
         <div class="game-name">
             <h1>ROCK - PAPER - SCISSORS</h1>
             <h2 class="players">Human VS Computer</h2>
         </div>
         
-        <p class="instruction">choose your weapon to defeat !</p>
+        <p class="instruction" id="instruct">choose your weapon to defeat !</p>
         <section class="game-ground">
             <div class="human">
                 <h3>Player</h3>
                 <div class="images">
-                    <img src="./images/rock.jpg" alt="rock image">
-                    <img src="./images/paper.jpg" alt="paper image">
-                    <img src="./images/scissor.jpg" alt="scissor image">
+                    <img src="./images/rock.jpg" alt="rock image" id="rock">
+                    <img src="./images/paper.jpg" alt="paper image" id="paper">
+                    <img src="./images/scissor.jpg" alt="scissor image" id="scissor">
                 </div>
-                <p class="points">0</p>
+                <p class="points" id="player-points">0</p>
             </div>
             <div class="computer">
                 <h3>Computer</h3>
@@ -34,11 +34,15 @@
                     <img src="./images/paper.jpg" alt="paper image">
                     <img src="./images/scissor.jpg" alt="scissor image">
                 </div>
-                <p class="points">0</p>
+                <p class="points" id="computer-points">0</p>
             </div>
         </section>
-        <section class="game-status">
-            <h3 id="result"> Who will become winner of the day ! </h3>
+
+        <section id="game-status">
+            <div id="selected-tools">
+            </div>
+            <h3 id="result">Game Status</h3>
+            <button id="replay" onclick = gameReplay()>Replay</button>
         </section>
         <footer>@Game Design by Dania</footer>
     </div>
